update project files

--- a/index.html
+++ b/index.html
@@ -16,40 +16,40 @@
 
 <body>
 
-    <div class="modal_wrapper">
-        <div class="my_modal">
-            <p class="final_score">Your score: <span id="number_points_modal" class="points_modal"></span></p>
-            <div class="wrapper_name_modal">
-                <p class="name_player">Name</p>
-                <input id="value_player" type="text">
+    <div class="modalWrapper">
+        <div class="myModal">
+            <p class="finalScore">Your score: <span id="numberPointsModal" class="pointsModal"></span></p>
+            <div class="wrapperNameModal">
+                <p class="namePlayer">Name</p>
+                <input id="valuePlayer" type="text">
             </div>
-            <button type="button" class="btn btn-primary btn_modal">SAVE</button>
+            <button type="button" class="btn btn-primary btnModal">SAVE</button>
         </div>
     </div>
 
     <header>
         <h1>Remove the cubes</h1>
-        <div class="wrapper_stat_header">
+        <div class="wrapperStatHeader">
             <button type="button" id="timerButton" class="btn btn-primary">START</button>
-            <button type="button" id="newGameButton" class="btn btn-primary btn_new_game">NEW GAME</button>
-            <div class="points_wrapper">
+            <button type="button" id="newGameButton" class="btn btn-primary btnNewGame">NEW GAME</button>
+            <div class="pointsWrapper">
                 <p>Points</p>
-                <span id="number_points" class="points"></span>
+                <span id="numberPoints" class="points"></span>
             </div>
-            <div class="time_wrapper">
+            <div class="timeWrapper">
                 <p>Time left</p>
                 <span id="timer" class="time">01:00</span>
             </div>
         </div>
     </header>
-    <div class="wrapper_content">
+    <div class="wrapperContent">
 
-        <div class="wrapper_game_field">
+        <div class="wrapperGameField">
 
         </div>
-        <div class="wrapper_result_table">
-            <h3 class="heading_result">Result</h3>
-            <div id="result_container">
+        <div class="wrapperResultTable">
+            <h3 class="headingResult">Result</h3>
+            <div id="resultContainer">
 
             </div>
         </div>
